--- a/_posts/2018-08-13-Pomost.md
+++ b/_posts/2018-08-13-Pomost.md
@@ -2,7 +2,7 @@
 published: false
 layout: post
 date: '2018-08-13 13:04:31 +0200'
-categories: jekyll update
+categories: home
 ---
 ## A New Post
 
